[Campaign]: Switching operation partially completed

--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -95,7 +95,7 @@
                       <label for="engagement_switch_<%= campaign.id %>"></label>
                     </div>
                   </td>
-                  <td><%= image_tag( campaign.offer.sender.image , :class => 'pepsi-img-responsive' ) %> &nbsp; <%= campaign.name %></td>
+                  <td><%= image_tag( campaign.offer.sender.profile_picture , :class => 'pepsi-img-responsive' ) %> &nbsp; <%= campaign.name %></td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_comments %></td>
                   <td><%= campaign.number_of_shares %></td>
