--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -54,7 +54,7 @@
                   <td class="squaredFour"><input type="checkbox" data-id="performance_<%= campaign.id %>" value="1"/></td>
                   <td>
                     <div class="switch">
-                      <input id="performance_switch_<%= campaign.id %>" class="cmn-toggle cmn-toggle-round" type="checkbox" value="<%= campaign.campaign_active %>">
+                      <input id="performance_switch_<%= campaign.id %>" data-id="<%= campaign.id %>" class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %> >
                       <label for="performance_switch_<%= campaign.id %>"></label>
                     </div>
                   </td>
@@ -88,10 +88,10 @@
             <tbody>
             <% @campaigns.each do |campaign| %>
                 <tr>
-                  <td class="squaredFour"><input type="checkbox" data-id="engagement_<%= campaign.id %>" value="1"/></td>
+                  <td class="squaredFour"><input type="checkbox" data-id="engagement_<%= campaign.id %>" value="1" checked/></td>
                   <td>
                     <div class="switch">
-                      <input id="engagement_switch_<%= campaign.id %>" class="cmn-toggle cmn-toggle-round" type="checkbox" value="<%= campaign.campaign_active %>">
+                      <input id="engagement_switch_<%= campaign.id %>" data-id="<%= campaign.id %>"  class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %>>
                       <label for="engagement_switch_<%= campaign.id %>"></label>
                     </div>
                   </td>
@@ -138,8 +138,19 @@
             document.getElementById("engagement-black").style.display = 'inline';
         });
 
-        $(document).on('click','.switch',function(){
+        $('.cmn-toggle').click(function() {
+            var id = $(this).data('id');
+            var campaign_active_status = this.checked;
 
+            $.ajax({
+                url: "<%= campaign_status_change_campaigns_path %>",
+                type: 'post',
+                dataType: 'script',
+                data: {
+                    id: id,
+                    campaign_active: campaign_active_status
+                }
+            });
 
         });
     });
