--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -4,7 +4,8 @@
 
 <div class="payment-div ">
   <div class="payment-button-set pull-right">
-    <button class="btn btn-export">EXPORT</button>
+    <%= link_to 'EXPORT', '', remote: true, :class => 'btn btn-export', id: 'export_campaigns' %>
+
     <div class="dropdown" id="age_button">
       <button class="btn btn-age dropdown-toggle" type="button" data-toggle="dropdown">Age
         <i class="fa fa-angle-down angle-down-age "></i>
@@ -51,7 +52,7 @@
             <tbody>
             <% @campaigns.each do |campaign| %>
                 <tr>
-                  <td class="squaredFour"><input type="checkbox" data-id="performance_<%= campaign.id %>" value="1"/></td>
+                  <td class="squaredFour"><input type="checkbox" data-id="<%= campaign.id %>" value="1"/></td>
                   <td>
                     <div class="switch">
                       <input id="performance_switch_<%= campaign.id %>" data-id="<%= campaign.id %>" class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %> >
@@ -88,7 +89,7 @@
             <tbody>
             <% @campaigns.each do |campaign| %>
                 <tr>
-                  <td class="squaredFour"><input type="checkbox" data-id="engagement_<%= campaign.id %>" value="1" checked/></td>
+                  <td class="squaredFour"><input type="checkbox" data-id="<%= campaign.id %>" value="1" checked/></td>
                   <td>
                     <div class="switch">
                       <input id="engagement_switch_<%= campaign.id %>" data-id="<%= campaign.id %>"  class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %>>
@@ -151,6 +152,24 @@
                     campaign_active: campaign_active_status
                 }
             });
+
+        });
+
+        $('#export_campaigns').click(function() {
+            var campaign_ids = [];
+            $('.squaredFour input:checked').each(function() {
+                campaign_ids.push($(this).data('id'));
+            });
+
+            $.ajax({
+                url: "<%= export_campaigns_campaigns_path %>",
+                type: 'post',
+                dataType: 'script',
+                data: {
+                    campaign_ids: campaign_ids
+                }
+            });
+
 
         });
     });
