--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -59,7 +59,7 @@
                       <label for="performance_switch_<%= campaign.id %>"></label>
                     </div>
                   </td>
-                  <td><%= image_tag( campaign.offer.sender.profile_picture , :class => 'pepsi-img-responsive' ) %> &nbsp; <%= campaign.name %></td>
+                  <td><%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %></td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_post_reach %></td>
                   <td><%= campaign.end_date.present? ? campaign.end_date.strftime("%B %d, %Y") : 'NA' %></td>
@@ -96,7 +96,7 @@
                       <label for="engagement_switch_<%= campaign.id %>"></label>
                     </div>
                   </td>
-                  <td><%= image_tag( campaign.offer.sender.profile_picture , :class => 'pepsi-img-responsive' ) %> &nbsp; <%= campaign.name %></td>
+                  <td><%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %></td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_comments %></td>
                   <td><%= campaign.number_of_shares %></td>
