--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -89,7 +89,7 @@
             <tbody>
             <% @campaigns.each do |campaign| %>
                 <tr>
-                  <td class="squaredFour"><input type="checkbox" data-id="<%= campaign.id %>" value="1" checked/></td>
+                  <td class="squaredFour"><input type="checkbox" data-id="<%= campaign.id %>" value="1"/></td>
                   <td>
                     <div class="switch">
                       <input id="engagement_switch_<%= campaign.id %>" data-id="<%= campaign.id %>"  class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %>>
