--- a/app/views/offers/_influencer_offer_view.erb
+++ b/app/views/offers/_influencer_offer_view.erb
@@ -8,7 +8,7 @@
   </td>
   <td><%= image_tag offer.sender.profile_picture, class: 'inbox-logo-responsive' %></td>
   <td> <%= offer.sender.full_name %> </td>
-  <td class="standard-description"> <%= offer.message %></td>
+  <td class="standard-description"> <%= offer.messages.first.body %></td>
   <td class="btn-column">
     <% if  offer.waiting? %>
         <%= link_to 'Accept', accept_offer_path(offer, authenticity_token: form_authenticity_token), class: 'btn btn-accept', method: :put, remote: true %>
