[Campaign] Css Issue fixed: Sidebar's and Campaign new pages same class name changed

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -430,7 +430,7 @@ only screen and (max-width: 460px) {
     font-size: 13px;
 }
 
-.profile-info{
+.influencer-profile-info{
     padding: 28px 75px 34px 0;
     width: 100%;
 }
