--- a/app/views/offers/_influencer_offer_view.erb
+++ b/app/views/offers/_influencer_offer_view.erb
@@ -1,5 +1,5 @@
 
-<div class="offer_header">
+<div class="offer-header">
   <div class="read-status">
     <span class="status-inbox"></span>
   </div>
