--- a/app/views/offers/_brand_offer_veiw.erb
+++ b/app/views/offers/_brand_offer_veiw.erb
@@ -1,18 +1,33 @@
-<tr data-offer-id="<%= offer.id %>">
-  <td><span class="status-inbox status-inbox"></span></td>
-  <td class="squaredFour"><input type="checkbox"  value="1" class="select-offer" data-id="<%=offer.id %>"/></td>
-  <td class="inbox-star">
+
+<div class="offer-header">
+  <div class="read-status">
+    <span class="status-inbox"></span>
+  </div>
+
+  <div class="select-offer">
+    <input type="checkbox"  value="1" class="select-offer" data-id="<%=offer.id %>"/>
+  </div>
+
+  <div class="make-star">
     <%= link_to toggle_star_offers_path(ids: [offer.id], authenticity_token: form_authenticity_token), method: :put, remote: true do %>
-      <i class="fa fa-star <%= offer.starred_by_brand ? 'star-yellow' : 'star-grey' %>"></i>
+        <i class="fa fa-star <%= offer.starred_by_brand ? 'star-yellow' : 'star-grey' %>"></i>
     <% end %>
-  </td>
-  <td><%= image_tag offer.sender.profile_picture, class: 'inbox-logo-responsive' %></td>
-  <td> <%= offer.sender.full_name %> </td>
-  <td class="standard-description"> <%= offer.messages.first.try(:body) %></td>
-  <td>
-    <% if offer.accepted? %>
-        <%= link_to 'Engage', new_campaign_path(offer_id: offer.id), class: 'btn btn-accept' %>
-    <% end %>
-  </td>
-  <td><%= offer.time %></td>
-</tr>
+  </div>
+
+  <div >
+    <%= image_tag offer.sender.profile_picture, class: 'inbox-logo-responsive' %>
+    <span class="title"><%= offer.sender.full_name %> </span>
+  </div>
+
+  <div class="offer-text">
+    <p><%= offer.name %></p>
+  </div>
+
+  <div class="action">
+
+  </div>
+
+  <div class="offer-time">
+    <%= offer.time %>
+  </div>
+</div>
